@@ -70,6 +70,7 @@ Suggests:
     flare,
     fields,
     FNN,
+    fpc,
     frbs,
     FSelector,
     gbm,
