@@ -4,6 +4,7 @@ mlr_2.6:
 new learners
 -- regr.glmboost
 -- cluster.Cobweb
+-- cluster.dbscan
 
 mlr_2.5:
 - fixed a bug that caused performance() to return incorrect values with
